add navigation links to website and additional text

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <body>
 
 <h1>Hello World</h1>
+<h2>This is my first website</h2>
 <h2>My First Subheading</h2>
 
-<p>My first paragraph.</p>
+<p>My first paragraph. This is a paragraph explaiing what my website is about. I hope you enjoy your time here.</p>
 
+<p>Here is a link to my <a href="goodbye.html">Goodbye Page</a>.
 
 </body>
 </html>
