--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <h2>This is my first website</h2>
 <h2>My First Subheading</h2>
 
-<p>My first paragraph. This is a paragraph explaiing what my website is about. I hope you enjoy your time here.</p>
+<p>My first paragraph. This is a paragraph explaining what my website is about. I hope you enjoy your time here.</p>
 
 <p>Here is a link to my <a href="goodbye.html">Goodbye Page</a>.
 
