add bullet course list to index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 
 <p>My first paragraph. This is a paragraph explaining what my website is about. I hope you enjoy your time here.</p>
 
+<p>Below is an overview of my courseload during the Fall 2017 semester at HKS:
+<ul>
+	<li>API-101 - Economics</li>
+	<li>API-201 - Statistics</li>
+	<li>DPI-201 - Ethics</li>
+	<li>IGA-238 - Technology, Privacy, and the Internet</li>
+	<li>MLD-220M - Negotiations</li>
+	<li>MLD-501M - Conflict and Collaboration</li>
+</ul>
+</p>
+
 <p>Here is a link to my <a href="goodbye.html">Goodbye Page</a>.
 
 </body>
