--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </ul>
 </p>
 
-<p>Here is a link to my <a href="goodbye.html">Goodbye Page</a>.
+<p>Here is a link to my <a href="goodbye.html">Goodbye Page</a>.</p>
 
 </body>
 </html>
