add linkedin hyperlink to index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 </ul>
 </p>
 
+<p>Find me on <a href="https://www.linkedin.com/in/oliver-backes-3bbb1421/">LinkedIn</a>!</p>
+
 <p>Here is a link to my <a href="goodbye.html">Goodbye Page</a>.</p>
 
 </body>
